
  * Fix `StreamBrowser.print_tree` when called without arguments
    GitHub issue #5 reported by pedru-de-huere

  * Add memory panel for django-debug-toolbar

  * Track instance counts of tracked classes without snapshots

  * Add close method to ClassTracker

  * Upgrade to Highcharts 3 and jQuery 1.10

  * Add support for Python 3.4, drop support for Python 2.4


Release 0.3.1
=============

  * Fix class tracker graph data formatting
    Issue 48 reported by Berwyn Hoyt

  * Improve web class tracker documentation
    Issue 49 reported by Berwyn Hoyt

  * Update links to GitHub and PyPi


Release 0.3.0
=============

  * Support for Python 3.3


Release 0.2.2
=============

  * Work around array sizing bug in Python 2.6-3.2
    Issue 46 reported by Matt

  * Fix import when python is run with optimization `-OO`
    Issue 47 reported by Kunal Parmar


Release 0.2.1
=============

  * Fix static file retrieval when installed via easy_install

  * Show class tracker instantiation traces and referent trees in web interface

  * New style for web interface


Release 0.2
===========

The second release is one of several steps to better integrate the different
sub-systems of Pympler. All modules now directly reside in the pympler namespace
which simplifies the import of Pympler modules.  Pympler 0.2 introduces a web
interface to facilitate memory profiling.  Pympler now fully supports Python
3.x. This release also adds several modules replacing the *Heapmonitor* module
with the new *class tracker* facility.

  * Introduce web frontend

  * Split Heapmonitor into several new modules

  * New `process` module to obtain memory statistics of the Python process

  * Improved garbage illustration which can directly render directed graphs
    using graphviz


Release 0.1
===========

This initial release is the first step to unify three separate Python memory
profiling tools. We aim to create a place-to-go for Python developers who want