@@ -23,6 +23,9 @@ Release 0.4.0
 
   * Add support for Python 3.4, drop support for Python 2.4
 
+  * Fix sizing of named tuples
+    GitHub issue #10 reported by ceridwen
+
 
 Release 0.3.1
 =============
